--- a/plugins/core/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
+++ b/plugins/core/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
@@ -564,7 +564,7 @@ code.aws.workspaces.short=Dev Environments
 codemodernizer.builderrordialog.description.title=Error occurred when building your project
 codemodernizer.chat.form.user_selection.item.choose_module=Choose a module to transform
 codemodernizer.chat.form.user_selection.item.choose_skip_tests_option=Choose to skip unit tests
-codemodernizer.chat.form.user_selection.item.choose_sql_metadata_file=Okay, I can convert the embedded SQL code for your Oracle to PostgreSQL migration. To get started, upload the zipped metadata file from your schema conversion in AWS DMS. To retrieve the metadata file: \n1. Open your database migration project in the AWS DMS console. \n2. Open the schema conversion and choose **Convert the embedded SQL in your application**. \n3. Choose the link to Amazon S3 console. You can download the metadata file from the {schema-conversion-project}/ directory.
+codemodernizer.chat.form.user_selection.item.choose_sql_metadata_file=Okay, I can convert the embedded SQL code for your Oracle to PostgreSQL transformation. To get started, upload the zipped metadata file from your schema conversion in AWS Data Migration Service (DMS). To retrieve the metadata file:\n1. Open your database migration project in the AWS DMS console.\n2. Open the schema conversion and choose **Convert the embedded SQL in your application**.\n3. Choose the link to Amazon S3 console.\n\nYou can download the metadata file from the {schema-conversion-project}/ directory. For more info, refer to the [documentation](https://docs.aws.amazon.com/dms/latest/userguide/schema-conversion-save-apply.html#schema-conversion-save).
 codemodernizer.chat.form.user_selection.item.choose_target_version=Choose the target code version
 codemodernizer.chat.form.user_selection.title=Q - Code transformation
 codemodernizer.chat.message.absolute_path_detected=I detected {0} potential absolute file path(s) in your {1} file: **{2}**. Absolute file paths might cause issues when I build your code. Any errors will show up in the build log.
@@ -575,7 +575,7 @@ codemodernizer.chat.message.button.hil_cancel=Cancel
 codemodernizer.chat.message.button.hil_submit=Submit
 codemodernizer.chat.message.button.open_file=Open file
 codemodernizer.chat.message.button.open_transform_hub=Open Transformation Hub
-codemodernizer.chat.message.button.select_sql_metadata=Upload metadata file
+codemodernizer.chat.message.button.select_sql_metadata=Select metadata file
 codemodernizer.chat.message.button.stop_transform=Stop transformation
 codemodernizer.chat.message.button.view_build=View build progress
 codemodernizer.chat.message.button.view_diff=View diff
@@ -622,7 +622,7 @@ codemodernizer.chat.message.skip_tests=I will build your module using `mvn test`
 codemodernizer.chat.message.skip_tests_form.response=Okay, I will {0} when building your module.
 codemodernizer.chat.message.skip_tests_form.run_tests=Run unit tests
 codemodernizer.chat.message.skip_tests_form.skip=Skip unit tests
-codemodernizer.chat.message.sql_metadata_success=I retrieved the following information from the schema conversion metadata you provided:
+codemodernizer.chat.message.sql_metadata_success=I found the following source database, target database, and host based on the schema conversion metadata you provided:
 codemodernizer.chat.message.sql_module_schema_prompt=To continue, choose the module and schema for this transformation.
 codemodernizer.chat.message.transform_begin=I'm starting to transform your code. It can take 10 to 30 minutes to upgrade your code, depending on the size of your module. To monitor progress, go to the Transformation Hub.
 codemodernizer.chat.message.transform_cancelled_by_user=I cancelled your transformation. If you want to start another transformation, choose **Start a new transformation**.
