align placeholder text across IDEs

--- a/plugins/core/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
+++ b/plugins/core/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
@@ -2072,6 +2072,7 @@ testgen.message.failed=Sorry, Test generation failed. Please try again in few mi
 testgen.message.regenerate_input=Sure thing. Please provide new instructions for me to generate the tests, and select the function(s) you would like to test.
 testgen.message.success=Unit test generation completed.
 testgen.no_file_found=Sorry, there isn't a source file open right now that I can generate a test for. Make sure you open a source file so I can generate tests.
+testgen.placeholder.enter_slash_quick_actions=Enter "/" for quick actions
 testgen.placeholder.newtab=Ask any coding question or type \u0022/\u0022 for actions
 testgen.placeholder.select_an_option = Please select an action to proceed (Accept or Reject)
 testgen.placeholder.view_diff=Select View Diff to see the generated unit tests
