--- a/plugins/core/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
+++ b/plugins/core/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
@@ -143,8 +143,10 @@ amazonqFeatureDev.placeholder.closed_session=Open a new chat tab to continue
 amazonqFeatureDev.placeholder.context_gathering_complete=Gathering context...
 amazonqFeatureDev.placeholder.downloading_and_extracting_lsp_artifacts=Downloading and Extracting Lsp Artifacts...
 amazonqFeatureDev.placeholder.generating_code=Generating code...
+amazonqFeatureDev.placeholder.lsp=LSP
 amazonqFeatureDev.placeholder.new_plan=Describe your task or issue in as much detail as possible
 amazonqFeatureDev.placeholder.provide_code_feedback=Provide feedback or comments
+amazonqFeatureDev.placeholder.select_lsp_artifact=Select LSP Artifact
 amazonqFeatureDev.placeholder.write_new_prompt=Write a new prompt
 apprunner.action.configure=Configure Service
 apprunner.action.create.service=Create Service...
