--- a/plugins/core/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
+++ b/plugins/core/resources/resources/software/aws/toolkits/resources/MessagesBundle.properties
@@ -1329,7 +1329,7 @@ feedback.submit_success=Thanks for the feedback!
 feedback.submitting=Sharing...
 feedback.title=Share Feedback for {0}...
 feedback.title.amazonq=Send feedback for Code Transformation by Amazon Q
-feedback.title.amazonq.feature_dev=Send feedback for Amazon Q
+feedback.title.amazonq.send_feedback=Send feedback for Amazon Q
 feedback.validation.comment_too_long=Comment is too long.
 feedback.validation.empty_comment=Please provide a comment.
 feedback.validation.no_sentiment=Please select how you're feeling.
@@ -2066,12 +2066,12 @@ sqs.subscribe.sns.validation.empty_topic=Topic must be specified.
 sqs.toolwindow=SQS
 sqs.url.parse_error=Error parsing SQS queue URL
 tags.title=Tags
+testgen.button.feedback=How can we make /test better?
 testgen.error.generic_error_message=Amazon Q encountered an error while generating tests. Try again later.
 testgen.error.generic_technical_error_message=I am experiencing technical difficulties at the moment. Please try again in a few minutes.
 testgen.error.maximum_generations_reach=You've reached the monthly quota for Amazon Q Developer's agent capabilities. You can try again next month. For more information on usage limits, see the <a href=\"https://aws.amazon.com/q/developer/pricing/\" target=\"_blank\">Amazon Q Developer pricing page</a>.
 testgen.message.cancelled=Unit test generation cancelled.
 testgen.message.failed=Test generation failed
-testgen.message.feedback=Thanks for providing feedback.
 testgen.message.regenerate_input=Sure thing. Please provide new instructions for me to generate the tests, and select the function(s) you would like to test.
 testgen.message.success=Unit test generation completed.
 testgen.no_file_found=Sorry, there isn't a source file open right now that I can generate a test for. Make sure you open a source file so I can generate tests.
